将接口进行分组
